# NZ-Start-Up

./: .env.example  .gitignore  .mcp.json  ABOUT.md  AGENTS.md  CAT_CONGRUENCE.md  CHANGELOG.md  COMPLIANCE.md  CONTRIBUTING.md  LICENSE  LICENSE-COMMERCIAL.md  NOTICE  README.md  REALITY.md  RELEASE.md  SECURITY.md  install.ps1  install.sh  mcp.json  pyproject.toml  requirements-lock.txt
cohorts/: README.md
compliance/: audit-log-schema.md  hitl-matrix.md  legal-boundaries-nz.md  privacy-act-2020.md  proprietary-licence.md  standards-mapping.md  te-mana-raraunga.md
docs/: AGENT_HARDENING.md  ARCHITECTURE.md  ARCHITECTURE_DETAILED.md  BANK_GST.md  COLD_START_FILM_RUNBOOK.md  CONSOLE.md  DEMO.md  DEMO_10_MIN.md  DUAL_LICENCE.md  ECONOMIC_IMPACT.md  EDA_DEMO_KIT.md  EXPORTS.md  FLEET.md  FOUNDER_SEND_PACK.md  FOUNDER_TODAY.md  GETTING_STARTED.md  INVESTOR_RD_AND_MARKET_REFERENCE.md  INVESTOR_TEASER_ONE_PAGER.md  INVOICES_HANDOFF.md  LEGAL_BOUNDARIES.md  LEGAL_REVIEW_CHECKLIST.md  MARKET.md  MARKET_FIT_MATRIX.md  MCP.md  OPTIMIZATION_EXECUTION.md  PILOT_ONBOARD.md  PORTFOLIO_MARKET_FIT.md  PRESEED_ECOSYSTEM.md  SEED_INVESTOR_PACK.md  STANDARDS.md  STATUS_BOARD.md  SUPER_GROK_PROCEED_LOG.md  USE_AS_EMPLOYEE.md  VT_POWERUP_APPROACH.md  WHITE_LABEL.md  XERO.md
evals/: README.md
knowledge/: agentic-ecosystem-nz.md  company-memory-schema.md  founder-lifecycle.md  funding-landscape.md  nz-integrations.md  nz-market-stats.md
memory/: README.md
nz_startup/: __init__.py  __main__.py  agent_guardrails.py  audit.py  audit_export.py  backup.py  bank_feed.py  board_pack.py  branding.py  calendar_ops.py  cli.py  cohort.py  compliance_gate.py  console.py  demo.py  doctor.py  drafts.py  evals.py  export_reminders.py  grants.py  gst_worksheet.py  handoff.py  hitl.py  install_skills.py  invoice_triage.py  market_fit.py  mcp_server.py  memory.py  memory_index.py  model_routing.py  nzbn.py  onboard.py  operator.py  packaging.py  partner_report.py  paths.py  pilot_offer.py  pipeline.py  rdti.py  schedule.py  (+6 more)
portfolio/: apply_congruence.ps1  fix_encoding.py  fix_fivepanelhat_readme.py  rebrand_byte_size_kai.py  sync_skills_to_aether.ps1
scripts/: _scaffold_skills.py  check_knowledge_freshness.py  demo_eda.ps1  demo_eda.sh  run_cadence.py  validate_skills.py
standards/: diamond-foundation.md  gold-workflow.md  platinum-intelligence.md
templates/: annual-return-checklist.md  bank-feed-sample.csv  calendar.csv  cohort.example.json  constitution-notes.md  employment-offer-outline.md  grant-application-draft.md  grants-tracker.csv  gst-prep-checklist.md  (+12 more)
(+74 files in other folders)
