[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nz-startup-in-a-box"
version = "1.1.0"
description = "NZ Start-Up in a Box — Aether skills fleet with CAT Gold/Diamond/Platinum standards"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Coastal Alpine Tech Limited" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
]
mcp = [
  "mcp>=1.2.0",
]
pdf = [
  "pypdf>=4.0",
]
desktop = [
  "pywebview>=5.0",
]
all = [
  "pytest>=8.0",
  "ruff>=0.4",
  "mcp>=1.2.0",
  "pypdf>=4.0",
  "pywebview>=5.0",
]

[project.scripts]
nz-startup = "nz_startup.cli:main"

[tool.setuptools.packages.find]
include = ["nz_startup*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
